<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="57dp"
    android:paddingTop="24dp"
    android:paddingEnd="57dp">

    <TextView
        android:id="@+id/signinup_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/notosanskr_medium"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/signinup_subtitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:text="@string/start_login"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/signinup_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/notosanskr_medium"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/signinup_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/notosanskr_medium"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/signinup_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/notosanskr_medium"
        android:hint="@string/nickname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/signinup_doSign_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_bright_gray"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/signinup_forgot_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="15sp" />
</LinearLayout>