<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="268dp"
    android:layout_height="140dp"
    android:layout_gravity="center"
    android:background="@drawable/border_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title_textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/delete_dialog_title"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/dialog_description_textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center"
        android:includeFontPadding="false"
        android:text="@string/delete_dialog_description"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#743C3C43" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="#007DFF"
            android:textSize="17sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#743C3C43" />

        <Button
            android:id="@+id/dialog_ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/delete"
            android:textColor="#007DFF"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>