<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="57dp"
    android:paddingTop="24dp"
    android:paddingEnd="57dp">

    <TextView
        android:id="@+id/signUp_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/notosanskr_medium"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/signUp_subtitle_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/continue_registration_process"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUp_nickname_inputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.sinagram.yallyandroid.Util.ClearEditText
                android:id="@+id/signUp_nickname_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/nickname"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/gray"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUp_age_inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_age_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/gray"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_password_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:hintEnabled="false">

        <com.sinagram.yallyandroid.Util.ClearEditText
            android:id="@+id/signUp_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_confirm_password_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:hintEnabled="false">

        <com.sinagram.yallyandroid.Util.ClearEditText
            android:id="@+id/signUp_confirm_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUp_doSign_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_bright_gray"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>