<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="72dp"
            android:gravity="center"
            android:text="@string/welcome_yally"
            android:textColor="@color/color_gray"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="72dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="3sp"
            android:text="@string/slash_writing"
            android:textColor="@color/color_gray"
            android:textSize="18sp" />

        <Button
            android:id = "@+id/splash_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/color_white"
            android:textSize="20sp" />

        <Button
            android:id = "@+id/splash_signUp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="149dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="149dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/slash_signUp"
            android:textColor="@color/color_gray"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>