<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="57dp"
    android:paddingTop="24dp"
    android:paddingEnd="57dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:text="@string/start_login"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_gradient"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="15sp" />
</LinearLayout>