<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="57dp"
    android:paddingTop="24dp"
    android:paddingEnd="57dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/notosanskr_medium"
        android:text="@string/welcome_first_visit"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:text="@string/start_sign_up"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <com.chaos.view.PinView
        android:id="@+id/authentication_authCode_pinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:cursorVisible="true"
        android:inputType="text"
        android:itemBackground="@color/confirmBox"
        android:textSize="40sp"
        android:textStyle="bold"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="80dp"
        app:itemRadius="4dp"
        app:itemSpacing="4dp"
        app:itemWidth="46dp"
        app:lineColor="#1A707070"
        app:lineWidth="1dp"
        app:viewType="rectangle" />

    <Button
        android:id="@+id/authentication_doSign_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_gradient"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>